# rust-contract

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs
test/: Cargo.toml
test/src/: lib.rs
