[package]
name = "rust-contract"
version = "0.1.0"
authors = ["CATboardBETA <catboardbeta@gmail.com>"]
description = "A simple contract-based programming annotation library for Rust."
keywords = ["contract", "proc_macro", "procmacro", "contract-based", "programming", "annotation", "library"]
edition = "2021"

[lib]
proc-macro = true

[workspace]
members = [
    "test",
]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-error = "1.0"